# course_work

./: CMakeLists.txt  cloth.cpp  cloth.h  main.cpp  sphere.cpp  sphere.h  spring.cpp  spring.h
